# hillelbot

./: CMakeLists.txt  README.md  notes_bot.txt  vcpkg.json
src/: Secret.cxx  Secret.hxx  commands.cxx  commands.hxx  config.hxx  main.cxx
